# bevy_game_template

./: Cargo.toml  index.html  todo
.cargo/: config.toml
credits/: CREDITS.md
src/: assets.rs  debug.rs  game_state.rs  input_binding.rs  loading.rs  main.rs  menu.rs  mouse.rs  palette.rs  pause.rs  render.rs  sfx.rs  transform.rs  tween.rs
src_assets/: ui_btn_click.aup3-shm  ui_btn_click.aup3-wal
